tests/semantic_cases/invalid/writestring_non_string_arg.ob0
MODULE Main;
BEGIN
  WriteString(1)
END Main.
